# psig

./: .clang-format  .travis.yml  AUTHORS  COPYING  Doxyfile  LICENSE  Makefile.am  README.md  cleanup.sh  configure.ac  dch  generate_deb  publish
debian/debian/: changelog  control
debian/trusty/: changelog  copyright
debian/vivid/: changelog
examples/: Makefile.am  async_example.cpp  exit_on_any_signal.cpp  print_signal.cpp  sigaction_example.cpp  sync_example.cpp
include/: Makefile.am
include/psig/: psig.hpp
tests/: Makefile.am  test.cpp
